# hiring_task

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: api.py  models.py
src/tests/: test_api.py  test_models.py
